Flexbox gap fix

--- a/src/styles/_content.sass
+++ b/src/styles/_content.sass
@@ -60,7 +60,7 @@
 .content-tags-tag
   text-decoration: none
   color: inherit
-  margin-right: 0.6rem
+  margin: 0.2rem 0.6rem 0.2rem 0
   &:last-child
     margin-right: 0
 .content-tags-tag:before
