--- a/src/styles/_project.sass
+++ b/src/styles/_project.sass
@@ -112,10 +112,10 @@ $image-gap-plus: $image-gap + $image-gap-space
   text-decoration: none
   display: flex
   align-items: center
-  gap: 1rem
   .project-card-read-more-text
     border-bottom: solid 3px $brand-tertiary
   .fa
     font-size: 3rem
+    margin-right: 1rem
   @media (max-width: $breakpoint-sm)
     font-size: 1.2rem
